[tool.poetry]
name = "hello-openfeature-python-server"
version = "0.1.0"
description = ""
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
launchdarkly-openfeature-server = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
